[tool.poetry]
name = "sweep-design"
version = "0.1.0"
description = "Project designed to create and analyze sweep signals."
authors = ["Vladislav <serebraykov.vs@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7, <4.0"

numpy = [
    {version = "<=1.19", python = ">=3.7,<3.8"},
    {version = ">1.19", python = ">=3.8"}
]
scipy = [
    {version = ">=1.2,<1.8", python = ">=3.7,<3.8"},
    {version = ">=1.8", python = ">=3.8"}
]

emd-signal = "^1.2.3"
packaging = "^21.3"

[tool.poetry.dev-dependencies]
autopep8 = "^2.0.0"

[tool.poetry.group.dev.dependencies]
mypy = "^0.991"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
